resume fix display on mobile

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -22,7 +22,7 @@
   }
 
   .nav_bar_open {
-    min-height: 160px;
+    min-height: 220px;
   }
 
   .nav_mobile {
