--- a/components/Resume/styles.module.scss
+++ b/components/Resume/styles.module.scss
@@ -3,14 +3,20 @@
     overflow: hidden;
     width: 70%;
     padding-top: 100%;
-    /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
-.resume embed {
+
+.resume iframe {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 100%;
+    height: 85%;
+}
+
+@media screen and (max-width: 1200px) {
+    .resume iframe {
+        height: 100%;
+    }
 }
